--- a/project-files/styles/style.css
+++ b/project-files/styles/style.css
@@ -3,19 +3,25 @@ html {
 }
 .five-day-forecast {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 .forecast {
-    flex: 1;
+    flex: 1 1 35%;
     padding: 1rem;
-    margin: 1rem;
+    margin: 1rem 0;
+    border: solid 2px blue;
+    max-width: 35%;
 }
 body {
     color: blue;
     font-family: arial;
+    width: 800px;
+    margin: auto;
 }
 h2 {
     font-family: 'Bungee Shade', cursive;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 h1 {
     font-family: 'Montserrat', sans-serif;
@@ -24,12 +30,19 @@ h1 {
 }
 h3 {
     text-align: right;
-    margin: 0 2rem 0 0;
+    margin: 0 2rem 2rem 0;
 }
 h4 {
     font-style: italic;
 }
-.forecast#day-1 {
+.todays-forecast {
+    border: solid 2px green;
+    text-align: center;
+    margin: auto;
+    width: 710px;
+}
+
+/*.forecast#day-1 {
     background: rgb(195,234,242);
     background: linear-gradient(180deg, rgba(195,234,242,0) 0%, rgba(195,234,242,1) 48%, rgba(255,101,0,1) 100%);
 }
